--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "clientinstall": "npm install --prefix client",
+    "dev": "concurrently \"npm run client\" \"npm run server\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "config": "^3.3.0",
+    "config": "^3.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "http-proxy-middleware": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.2"
+    "jss": "^10.0.4",
+    "mongoose": "^5.5.11"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
