--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.2.6",
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -22,7 +24,9 @@
     "http-proxy-middleware": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
     "jss": "^10.0.4",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "react-slick": "^0.25.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
