--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.3",
     "@material-ui/icons": "^4.9.1",
@@ -15,32 +24,26 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.25.2",
     "react-transition-group": "^4.3.0",
+    "slick-carousel": "^1.8.1",
+    "typeface-montserrat": "0.0.75",
     "uuid": "^7.0.1"
   },
+  "devDependencies": {
+    "prop-types": "latest"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "name": "client",
+  "private": true,
+  "proxy": "http://localhost:5000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "prop-types": "latest"
-  }
+  "version": "0.1.0"
 }
