--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "http-proxy-middleware": "^1.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-modal-video": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2",
