--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "movie-api",
+  "type": "module",
   "version": "1.0.0",
   "description": "Movie app",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "babel-node server.js",
+    "server": "nodemon --exec babel-node server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
     "dev": "concurrently \"npm run client\" \"npm run server\""
@@ -15,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "config": "^3.1.0",
     "cors": "^2.8.5",
@@ -26,6 +28,8 @@
     "mongoose": "^5.5.11"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
