--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "http-proxy-middleware": "^1.0.1",
+    "notistack": "^0.9.9",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-image-gallery": "^1.0.6",
